--- a/infrastructure/ssh-tunnels/tunnel.yml
+++ b/infrastructure/ssh-tunnels/tunnel.yml
@@ -8,12 +8,12 @@
   hosts: ms[0]
 
   vars:
-    bastion_host_name: "apigee-bastion.us-east1-b.sandbox-173316"
+    bastion_host_name: "{{ bastion_hostname | default('apigee-bastion.us-east1-b.fedex-pilot') }}"
     target_hosts:
     - { target_ip_address: "{{ private_address }}", target_port: "9000", port: "9000" }
     - { target_ip_address: "{{ private_address }}", target_port: "8080", port: "8080" }
-    - { target_ip_address: "{{ private_address }}", target_port: "9001", port: "9001" }
-    - { target_ip_address: "{{ private_address }}", target_port: "8079", port: "8079" }
+#    - { target_ip_address: "{{ private_address }}", target_port: "9001", port: "9001" }
+#    - { target_ip_address: "{{ private_address }}", target_port: "8079", port: "8079" }
 #    - { target_ip_address: "{{ hostvars[groups['ms'][1]]['private_address'] }}", target_port: "9010", port: "9000" }
 #    - { target_ip_address: "{{ hostvars[groups['ms'][1]]['private_address'] }}", target_port: "8090", port: "8080" }
 #    - { target_ip_address: "{{ hostvars[groups['pg'][0]]['private_address'] }}", target_port: "5432", port: "5432" }
