--- a/post-installation/backup/requirements.yml
+++ b/post-installation/backup/requirements.yml
@@ -3,6 +3,8 @@
 
 - src: https://github.com/carlosfrias/apigee-opdk-backup.git
 
+- src: https://github.com/carlosfrias/apigee-opdk-restore.git
+
 - src: https://github.com/carlosfrias/apigee-opdk-modules
 
 - src: https://github.com/carlosfrias/apigee-opdk-setup-openjdk.git
