--- a/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
@@ -2,110 +2,13 @@
 - name: Create infrastructure
   hosts: localhost
 
-  vars:
-    project_path: 'example-pilot'
-    gcp_project_name: 'fedex-pilot'
-    gcp_credentials_file: "{{ '~/.apigee-secure/fedex-pilot/fedex-pilot-apigee-service-account.json' | expanduser }}"
-    service_account_email: "apigee@fedex-pilot.iam.gserviceaccount.com"
-    terraform_version: "0.12.0"
-#    terraform_version: "2.17.0"
-    terraform_download_links:
-      Debian: "https://releases.hashicorp.com/terraform/{{ terraform_version }}/terraform_{{ terraform_version }}_linux_amd64.zip"
-      MacOSX: "https://releases.hashicorp.com/terraform/{{ terraform_version }}/terraform_{{ terraform_version }}_darwin_amd64.zip"
-    ds_instance_type: "n1-standard-8"
-    ds_disk_size: 250
-    ms_instance_type: "n1-standard-8"
-    ms_disk_size: 100
-#    rmp_instance_type: "projects/fedex-pilot/zones/us-east1-b/machineTypes/custom-8-16384"
-    rmp_instance_type: "custom-8-16384"
-    rmp_disk_size: 100
-    qpid_instance_type: "n1-standard-8"
-    qpid_disk_size: 500
-    pg_instance_type: "n1-standard-96"
-    pg_disk_size: 500
-    dp_instance_type: "n1-standard-8"
-    dp_disk_size: 100
-    dc_1_gcp_region: "us-east1"
-    dc_1_zone: "us-east1-b"
-    dc_1_region: "dc-1"
-    dc_1_ms_name: "planet-dc-1-ms-dc-1-ldap-dc-1-ui"
-    dc_1_ms_count: 1
-    dc_1_ms_instance_type: "{{ ms_instance_type }}"
-    dc_1_ms_disk_size: "{{ ms_disk_size }}"
-    dc_1_ds_name: "planet-dc-1-ds"
-    dc_1_ds_count: 3
-    dc_1_ds_instance_type: "{{ ds_instance_type }}"
-    dc_1_ds_disk_size: "{{ ds_disk_size }}"
-    dc_1_rmp_name: "planet-dc-1-rmp"
-    dc_1_rmp_count: 2
-    dc_1_rmp_instance_type: "{{ rmp_instance_type }}"
-    dc_1_rmp_disk_size: "{{ rmp_disk_size }}"
-    dc_1_qpid_name: "planet-dc-1-qpid"
-    dc_1_qpid_count: 1
-    dc_1_qpid_instance_type: "{{ qpid_instance_type }}"
-    dc_1_qpid_disk_size: "{{ qpid_disk_size }}"
-    pg_only_name: "planet-dc-1-pg"
-    pg_only_count: 0
-    pg_only_instance_type: "{{ pg_instance_type }}"
-    pg_only_disk_size: "{{ pg_disk_size }}"
-    dc_1_pgmaster_name: "planet-dc-1-pg-dc-1-pgmaster"
-    dc_1_pgmaster_count: 1
-    dc_1_pgmaster_instance_type: "{{ pg_instance_type }}"
-    dc_1_pgmaster_disk_size: "{{ pg_disk_size }}"
-    dc_1_pgstandby_name: "planet-dc-1-pg-dc-1-pgstandby"
-    dc_1_pgstandby_count: 1
-    dc_1_pgstandby_instance_type: "{{ pg_instance_type }}"
-    dc_1_pgstandby_disk_size: "{{ pg_disk_size }}"
-    dc_2_region: "dc-2"
-    dc_2_gcp_region: "us-east1"
-    dc_2_zone: "us-east1-c"
-    dc_2_ms_name: "planet-dc-2-ms-dc-2-ldap-dc-2-ui"
-    dc_2_ms_count: 0
-    dc_2_ms_instance_type: "{{ ms_instance_type }}"
-    dc_2_ms_disk_size: "{{ ms_disk_size }}"
-    dc_2_ds_name: "planet-dc-2-ds"
-    dc_2_ds_count: 0
-    dc_2_ds_instance_type: "{{ ds_instance_type }}"
-    dc_2_ds_disk_size: "{{ ds_disk_size }}"
-    dc_2_rmp_name: "planet-dc-2-rmp"
-    dc_2_rmp_count: 0
-    dc_2_rmp_instance_type: "{{ rmp_instance_type }}"
-    dc_2_rmp_disk_size: "{{ rmp_disk_size }}"
-    dc_2_qpid_name: "planet-dc-2-qpid"
-    dc_2_qpid_count: 0
-    dc_2_qpid_instance_type: "{{ qpid_instance_type }}"
-    dc_2_qpid_disk_size: "{{ qpid_disk_size }}"
-    dc_2_pgmaster_name: "planet-dc-2-pg-dc-2-pgmaster"
-    dc_2_pgmaster_count: 0
-    dc_2_pgmaster_instance_type: "{{ pg_instance_type }}"
-    dc_2_pgmaster_disk_size: "{{ pg_disk_size }}"
-    dc_2_pgstandby_name: "planet-dc-2-pg-dc-2-pgstandby"
-    dc_2_pgstandby_count: 0
-    dc_2_pgstandby_instance_type: "{{ pg_instance_type }}"
-    dc_2_pgstandby_disk_size: "{{ pg_disk_size }}"
-    dc_3_region: "dc-3"
-    dc_3_gcp_region: "us_east1"
-    dc_3_zone: "us-east1-d"
-    dc_3_ds_name: "planet-dc-3-ds"
-    dc_3_ds_count: 0
-    dc_3_ds_instance_type: "{{ ds_instance_type }}"
-    dc_3_ds_disk_size: "{{ ds_disk_size }}"
-    dc_3_rmp_name: "planet-dc-3-rmp"
-    dc_3_rmp_count: 0
-    dc_3_rmp_instance_type: "{{ rmp_instance_type }}"
-    dc_3_rmp_disk_size: "{{ rmp_disk_size }}"
-    dc_3_qpid_name: "planet-dc-3-qpid"
-    dc_3_qpid_count: 0
-    dc_3_qpid_instance_type: "{{ qpid_instance_type }}"
-    dc_3_qpid_disk_size: "{{ qpid_disk_size }}"
-    dev_portal_name: "planet-dc-1-dp-ui-dc-1-dp-db"
-    dev_portal_count: 0
-    dev_portal_instance_type: "{{ dp_instance_type }}"
-    dev_portal_disk_size: "{{ dp_disk_size }}"
+#  vars_files:
+#    - gce-attributes.yml
 
   tasks:
     - name: Install Dependent Packages
       become: true
+      tags: ['system']
       raw: "sudo apt-get install python3-apt -y"
       when: ansible_distribution == "Debian"
 
