--- a/installations/multi-node/requirements.yml
+++ b/installations/multi-node/requirements.yml
@@ -108,4 +108,4 @@
 
 - src: https://github.com/carlosfrias/apigee-opdk-update-component-qpidd.git
 
-
+- src: https://github.com/carlosfrias/apigee-opdk-settings-response-file.git
