--- a/infrastructure/setup-ansible-offline/ansible.cfg
+++ b/infrastructure/setup-ansible-offline/ansible.cfg
@@ -10,6 +10,9 @@ forks = 10
 retry_files_enabled = False
 ansible_shell_type=sh
 module_name = shell
+bin_ansible_callbacks = True
+stdout_callback = yaml
+stderr_callback = yaml
 
 [ssh_connection]
 #ssh_args = -o ControlMaster=auto -o ControlPersist=7200s -o KbdInteractiveAuthentication=no -o PreferredAuthentications=gssapi-with-mic,gssapi-keyex,hostbased,publickey -o PasswordAuthentication=no -q
